--- a/acupuntura.html
+++ b/acupuntura.html
@@ -300,7 +300,7 @@
 
       <p>
       Igualmente <strong>la base teórica y práctica</strong> sigue siendo el de la <strong>Medicina Tradicional China (MTCH). La integración de la
-      MTCH con la medicina occidental</strong> para a ser una nueva forma de ver y tratar al paciente.
+      MTCH con la medicina occidental</strong> pasa a ser una nueva forma de ver y tratar al paciente.
       </p>
 
       <h2 style="font-size: 30px; text-align: center">Puntos Gatillos</h2>
@@ -312,29 +312,29 @@
       <hr>
 
       <p>
-      Un <strong>punto gatillo (PG)</strong> esde el punto de vista clínico, es un nódulo o cordón palpable debajo de la piel, doloroso
+      Un <strong>punto gatillo (PG)</strong> desde el punto de vista clínico, es un nódulo o cordón palpable debajo de la piel, doloroso
       espontáneamente y a la presión. Están localizados la mayoría de las veces en los músculos esqueléticos y tendones,
-      pero también se los encuentran en las cápsulas y ligamentos articulares, Periostio y Piel.
+      pero también se los encuentran en las cápsulas y ligamentos articulares, periostio y piel.
       </p>
       <p>
-      En la Piel pueden estar vinculados con cicatrices. El dolor del <strong>PG</strong> Puede ser localizado o sentido en otra zona de la
-      misma región o más allá de ella (dolor referido).
+      En la piel pueden estar vinculados con cicatrices. El dolor del <strong>PG</strong> Puede ser localizado o sentido en otra zona de la
+      misma región o más allá de ella (<strong>dolor referido</strong>).
       <strong>La palpación de estas estructuras en general reproduce la sintomatología descripta por el paciente</strong>.
       El <strong>dolor por PG Frecuentemente es sentido lejos de la zona del punto</strong>.
       </p>
       <p>
-      Por ejemplo un <strong>dolor en la Pierna</strong> puede tener su origen en un PG De la <strong>zona Sacra</strong> o un dolor en el <strong>miembro superior o
-      Columna Cervical</strong> puede deberse a un PG localizado a nivel del <strong>músculo elevador del omóplato</strong>, en la parte superior de la
-      Espalda.
+      Por ejemplo un <strong>dolor en la pierna</strong> puede tener su origen en un PG De la <strong>zona sacra</strong> o un dolor en el <strong>miembro superior o
+      columna cervical</strong> puede deberse a un PG localizado a nivel del <strong>músculo elevador del omóplato</strong>, en la parte superior de la
+      espalda.
       Mucho de los trayectos de estos dolores referidos coinciden con los meridianos de la MTCH.
       <strong>Todos los PG son Puntos de Acupuntura</strong>. No todos los puntos de acupuntura son PG.
       </p>
       <p>
-      <strong>El dolor por PG se debe a la sensibilización de las terminaciones nerviosas presentes en los mismos.
+      El dolor por PG se debe a la sensibilización de las terminaciones nerviosas presentes en los mismos.
       La causa de esta sensibilización son múltiples, como veremos más adelante.
       Un PG activado (sensibilizado, dolorido) puede ser la causa primaria del cuadro doloroso o ser secundario a otro
       disturbio, por ejemplo visceral, manteniendo o agravando el dolor original.
-      El dolor por PG es una de las causas más comunes de dolor Músculo-Esquelético</strong>.
+      <strong>El dolor por PG es una de las causas más comunes de dolor Músculo-Esquelético.</strong>
       Este cuadro afecta a casi todas las edades. A diferencia de la Fibromialgia que incide mayoritariamente en las mujeres,
       el dolor por PG afecta a ambos sexos por igual.
       </p>
@@ -358,10 +358,10 @@
       J.H.Kellegren fue pionero a finales de la década de 1930 en la University College Hospital Medical School, cuando observó
       en pacientes que consultaban por dolor la presencia de nódulos o cordones alargados sensibles a la palpación, los cuales
       eran responsables de un dolor situado más allá de la zona: <strong>dolor referido</strong>.
-      Esas zonas sensibles a la presión se los llamó al principio Puntos Dolorosos.
+      Esas zonas sensibles a la presión se los llamó al principio puntos dolorosos.
       </p>
       <p>
-      El ortopedista norteamericano Steindler fue el primero en llamar a esos puntos, <strong>Puntos Gatillo</strong>. Este médico lograba aliviar las lumbociáticas inyectando Novocaína en los Puntos Dolorosos de la región Lumbar y Glútea.
+      El ortopedista norteamericano Steindler fue el primero en llamar a esos puntos, <strong>Puntos Gatillo</strong>. Este médico lograba aliviar las lumbociáticas inyectando Novocaína en los "puntos dolorosos" de la región lumbar y glútea.
       Janet Travell fue la médica que más aportó al tema a partir de 1940 basándose en las experiencias de Kellegren y Steindler.
       Travell adoptó el nombre de <strong>Puntos Gatillo</strong> y le agregó el adjetivo <strong>Miofacial</strong>.
       </p>
@@ -372,7 +372,7 @@
       </p>
 
       <div class = "squared">
-      <p style="margin: 0; text-align: center">TRATANDO SOLAMENTE EL O LOS PUNTOS GATILLOS SE PUEDE ELIMINAR TODA LA SINTOMATOLOGÍA DOLOROSA</p>
+      <p style="margin: 0; text-align: center"><strong>TRATANDO SOLAMENTE EL O LOS PUNTOS GATILLOS SE PUEDE ELIMINAR TODA LA SINTOMATOLOGÍA DOLOROSA</strong></p>
       </div>
 
     </div>
