--- a/ah.html
+++ b/ah.html
@@ -27,19 +27,22 @@
       <div class = "squared">
 
       <p>
-        Es un componente natural del <strong>Líquido Sinovial</strong> de las articulaciones. Se sintetiza en el laboratorio.
+        Es un componente natural del <strong>líquido sinovial</strong> de las articulaciones. Se sintetiza en el laboratorio.
       </p>
 
+      <p>Sus propiedades principales son: el de <strong>formar colchón amortiguador</strong> entre las superficies articulares, <strong>proteger el cartílago articular</strong> y <strong>lubricar a la articulación</strong></p>
+
+      <hr>
+
       <p>
-        Las propiedades principales de la inyección intra-articular del Ácido Hialurónico son
+        La inyección intra-articular del Ácido Hialurónico:
       </p>
         <ul style="margin:0">
-          <li><strong>Calmar el dolor</strong></li>
-          <li>Formar un <strong>colchón amortiguador</strong> entre las superficies articulares.</li>
-          <li><strong>Proteger el cartílago articular</strong>.</li>
-          <li><strong>Lubricar</strong> la articulación.</li>
+          <li><strong>Calma el dolor</strong></li>
+          <li><strong>Protege el cartílago articular</strong>.</li>
+          <li><strong>Lubrica</strong> la articulación.</li>
           <li><strong>Inhibir la degeneración del cartílago</strong>.</li>
-          <li><strong>Mejorar la movilidad articular</strong>.</li>
+          <li><strong>Mejora la movilidad articular</strong>.</li>
         </ul>
 
       </div>
@@ -69,7 +72,9 @@
 
       <p>Se recomienda una inyección intra-articular semanal durante tres a cinco semanas.</p>
 
-      <p><button>AH y Artrosis</button></p>
+      <div class="a-button-div--art">
+        <a class="a-button" href="artrosis.html">AH y Artrosis</a>
+      </div>
 
       <p>
         Las articulaciones poseen en su interior un líquido viscoso y claro que tiene la función de:
@@ -83,20 +88,12 @@
         </ul>
 
       <p>
-        Este líquido se llama <strong>Líquido Sinovial</strong> y está presente <strong>normalmente</strong> en las articulaciones.
+        Este líquido se llama <strong>líquido sinovial</strong> y está presente <strong>normalmente</strong> en las articulaciones.
         El componente más importante de este líquido es el <strong>Ácido Hialurónico</strong> el cual es el principal responsable de las propiedades del mismo.
         Esta sustancia es segregada por diferentes tipos de células: Sinoviocitos, Condrocitos y Fibroblastos.
       </p>
 
-      <p>
-        Como consecuencia, progresivamente
-      </p>
-      <ul>
-        <li>Se degrada el cartílago articular</li>
-        <li>Se forman osteofitos en los márgenes articulares</li>
-        <li>Se afecta el hueso subcontral, el cual se esclerosa y aparecen pseudo quistes óseos (geodas)</li>
-
-      </ul>
+      <p>En la <strong>Artrosis</strong> la concentración de <strong>Ácido Hialurónico</strong> en el <strong>líquido sinovial</strong> está disminuída y alterada.</p>
     </div>
   </div>
   <script src="./main.bundle.js" charset="utf-8"></script>
