--- a/artrosis.html
+++ b/artrosis.html
@@ -42,8 +42,8 @@
       <p>
         <strong>Dolor mecánico</strong> es aquel que se presenta con el movimiento, cuando la articulación soporta cargas y calma con el reposo.
         Se trata de un dolor crónico con empujes y remisiones.
-        La <strong>Artrosis</strong> es una patología que se inicia en el <strong>Cartílago Articular</strong> pero que después termina afectando al Hueso Subcondral,
-        Periostio y a la Sinovial.
+        La <strong>Artrosis</strong> es una patología que se inicia en el <strong>Cartílago Articular</strong> pero que después termina afectando al hueso subcondral,
+        Periostio y a la sinovial.
       </p>
 
       <p>
@@ -59,26 +59,26 @@
         <ul>
           <li><strong>Pinzamiento Articular</strong>, producto de la degeneración del cartílago.</li>
           <li><strong>Osteofitos</strong>, saliencias óseas en forma de "picos de loro" en las márgenes articulares.</li>
-          <li><strong>Esclerosis Subcondral</strong>, aparición de laminillas óseas en las zonas de apoyo, bajo las
+          <li><strong>Esclerosis subcondral</strong>, aparición de laminillas óseas en las zonas de apoyo, bajo las
           lesiones cartilaginosas profundas.</li>
           <li><strong>Geodas</strong>, cavidades pseudoquísticas en el interior del hueso, que están relacionadas con una hiperpresión local.</li>
         </ul>
 
       <p>
-        La <strong>Sinovial</strong> (membrana que recubre por dentro a las articulaciones) puede reaccionar con una hiperproducción de
-        líquido sinovial produciendo un <strong>Derrame Articular</strong> de tipo mecánico y como consecuencia una "hinchazón de la articulación".
+        La <strong>sinovial</strong> (membrana que recubre por dentro a las articulaciones) puede reaccionar con una hiperproducción de
+        líquido sinovial produciendo un <strong>derrame articular</strong> de tipo mecánico y como consecuencia una "hinchazón de la articulación".
       </p>
 
       <p>
         En determinados casos aparecen <strong>cuerpos extraños</strong> dentro de las articulaciones: la <strong>Osteocondromatosis Secundaria</strong>.
-        Estas estructuras pueden deberse a una Metaplasia de la Sinovial o a pequeños trozos de cartílago que se desprenden del
+        Estas estructuras pueden deberse a una "metaplasia de la sinovial" o a pequeños trozos de cartílago que se desprenden del
         revestimiento cartilaginoso.
-        Raramente son palpables. En ocasiones pueden producir breves <strong>Bloqueos Articulares</strong> al interponerse entre las superficies
+        Raramente son palpables. En ocasiones pueden producir breves <strong>bloqueos articulares</strong> al interponerse entre las superficies
         articulares durante los movimientos de la articulación.
       </p>
 
       <p>
-        <strong>Participación muscular</strong>: muchas veces las deformidades se producen por la <strong>Contractura Muscular Antiálgica</strong>. Por ejemplo en
+        <strong>Participación muscular</strong>: muchas veces las deformidades se producen por la <strong>contractura muscular antiálgica</strong>. Por ejemplo en
         la rodilla, donde los músculos isquiotibiales son más potentes que el cuádriceps, se produce una deformidad "en flexión"
         de la rodilla, agravando de esta manera el cuadro de fondo.
         También se produce una <strong>atrofia muscular</strong> propia de toda patología articular.
@@ -91,15 +91,15 @@
         <ul>
           <li>Edad > 50 años</li>
           <li>Sexo femenino
-          <li>Factores genéricos
+          <li>Factores genéticos
           <li>Sobrecargas repetidas o permanentes sobre las articulaciones
               <ul>
-          		<li>Obesidad</li>
-          		<li>Ocupaciones laborales</li>
+            		<li>Obesidad</li>
+            		<li>Ocupaciones laborales</li>
+                <li>Deportes</li>
               </ul>
-          <li>Deportes
-          <li>Patologías previas de las articulaciones
-          <li>Alteraciones del eje de los miembros que llevan a un desequilibrio de las cargas sobre las articulaciones.
+          <li>Patologías previas de las articulaciones.</li>
+          <li>Alteraciones del eje de los miembros que llevan a un desequilibrio de las cargas sobre las articulaciones.</li>
         </ul>
 
       <hr>
@@ -113,7 +113,7 @@
         <strong>Evolución</strong>: Es variable. Si hay factores mecánicos que la mantienen puede ser progresiva.
       </p>
 
-      <h2 style="font-size: 22px">Plasma Rico en Plaquetas (PRP)</h2>
+      <h2 style="font-size: 22px">Tratamiento de la Artrosis con Plasma Rico en Plaquetas (PRP)</h2>
 
       <p>
         Las <strong>Plaquetas</strong> poseen en su interior los llamados <strong>Factores de Crecimiento (FC)</strong>.
@@ -146,12 +146,12 @@
           <li><strong>Tobillos</strong></li>
         </ul>
 
-      <h2 style="font-size: 22px">Ácido Hialurónico</h2>
+      <h2 style="font-size: 22px">Tratamiento de la Artrosis con Ácido Hialurónico (AH)</h2>
 
       <p>
-        El <strong>Ácido Hialurónico (AH)</strong> es uno de los componentes principales del Líquido Sinovial, Cartílago y de la Membrana Sinovial.
-        Es producido por los condrocitos (células del Cartílago) y los sinoviocitos (células de la Sinovial).
-        El AH es el responsable de las <strong>Propiedades Viscoelásticas</strong> del Líquido Sinovial, de la <strong>lubricación de la
+        El <strong>Ácido Hialurónico (AH)</strong> es uno de los componentes principales del Líquido sinovial, Cartílago y de la Membrana sinovial.
+        Es producido por los condrocitos (células del Cartílago) y los sinoviocitos (células de la sinovial).
+        El AH es el responsable de las <strong>Propiedades Viscoelásticas</strong> del Líquido sinovial, de la <strong>lubricación de la
         Cavidad Articular</strong> y del mantenimiento de la <strong>integridad estructural y funcional del Cartílago Articular</strong>.
       </p>
 
@@ -176,7 +176,7 @@
       </ul>
       <p>
         La vía de administración del <strong>AH</strong> es <strong>intra-articular</strong>.
-        Se recomienda de tres a cinco aplicaciones de AH por semana.
+        Se recomienda una inyección de AH semanal durante tres a cinco semanas.
       </p>
       <p>
         Las articulaciones más frecuentemente tratados son:
