--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="sq1__txt">
           <h3 class="sq1__txt__h3">Plasma rico en plaquetas</h3>
             <ul class="sq1__txt__p">
-              <li class="sq1__txt__p__span">Regenera - Cartílago, Tendón, Piel</li>
+              <li class="sq1__txt__p__span">Regenera - Cartílago, Tendón, piel</li>
               <li class="sq1__txt__p__span">Artrosis - Rodilla, Cadera, Hombros, Tobillos, Codos</li>
               <li class="sq1__txt__p__span">Tendinitis</li>
               <li class="sq1__txt__p__span">Lesiones deportivas</li>
@@ -80,7 +80,7 @@
       </div>
       <div class="sq1">
         <div class="sq1__txt">
-          <h3 class="sq1__txt__h3">Ácido Hialurónico</h3>
+          <h3 class="sq1__txt__h3">Ácido Hialurónico - Articular</h3>
           <p class="sq1__txt__p">
             <h5 class="sq1__txt__p__h5">Artrosis</h5>
             <ul>
@@ -149,7 +149,7 @@ En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasm
           <ul class="sq2__txt__ul">
              <li>Regenera</li>
              <li>Rejuvenece</li>
-             <li>Aumenta la firmeza de la Piel, recuperando su elasticidad y brillo</li>
+             <li>Aumenta la firmeza de la piel, recuperando su elasticidad y brillo</li>
              <li>Detiene el envejecimiento cutáneo</li>
           </ul>
           <div style='margin-bottom:55px' class="a-button-div">
@@ -157,9 +157,9 @@ En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasm
           </div>
           <p>Hilos Tensores</p>
           <ul>
-            <li>Sostienen y reposicionan la Piel y tejidos caídos</li>
+            <li>Sostienen y reposicionan la piel y tejidos caídos</li>
             <li>Combate la flacidez</li>
-            <li>Efecto lifting: Se recupera la tensión de la Piel</li>
+            <li>Efecto lifting: Se recupera la tensión de la piel</li>
           </ul>
           <div class="a-button-div">
             <a class="a-button" href="ht.html">Leer más</a>
