--- a/prp.html
+++ b/prp.html
@@ -27,7 +27,7 @@
       Las plaquetas poseen proteínas llamadas <strong>factores de crecimiento</strong>, las cuales tienen la capacidad de <strong>regenerar
       tejidos lesionados, envejecidos o poseedores de una enfermedad regenerativa.
       El Plasma Rico en Plaquetas regenera cartílago (Artrosis de Rodilla, Cadera, Hombros), tendones (Tendinitis de hombro,
-      Codo, etc), Piel (rejuvenecimiento facial)</strong>.
+      Codo, etc), piel (rejuvenecimiento facial)</strong>.
       </p>
 
       <hr>
@@ -40,6 +40,8 @@
         <li><strong>Tendinitis de Hombro, Codo</strong>.</li>
 
         <li><strong>Lesiones deportivas</strong></li>
+
+        <li><strong>Espína calcánea</strong></li>
 
         <li><strong>Tratamientos estéticos</strong>
           <ul>
@@ -81,12 +83,14 @@
       del fibroblasto. Esta célula es la encargada de producir <strong>Ácido Hialurónico, Fibras Colágenas y Fibras Elásticas</strong>.</p>
 
       <p>Estos elementos son fundamentales en la calidad de la piel que con los años su producción va disminuyendo.
-      Es decir, el PRP <strong>enlentece el envejecimiento y rejuvenece la Piel</strong>.</p>
+      Es decir, el PRP <strong>enlentece el envejecimiento y rejuvenece la piel</strong>.</p>
 
       <p>Como norma se recomienda al inicio tres aplicaciones, una por mes, luego otra de refuerzo a los seis u ocho meses.
       Esto puede ser sujeto a variaciones.</p>
 
       <img class="art-pic" src="img/rostro.jpg" alt="plasma rico en plaquetas">
+
+      <hr>
 
       <p>Nuestra sangre posee sustancias que son capaces de reconstruir tejidos lesionados, envejecidos o que presentan una
       enfermedad degenerativa.
