--- a/ht.html
+++ b/ht.html
@@ -25,8 +25,8 @@
     <div class = "squared">
 
       <ul style="margin:0">
-        <li>Sostienen y reposicionan la Piel y los tejidos caídos</li>
-        <li>Efecto Lifting: Se recupera la tensión de la Piel</li>
+        <li>Sostienen y reposicionan la piel y los tejidos caídos</li>
+        <li>Efecto Lifting: Se recupera la tensión de la piel</li>
         <li>Combate la flacidez</li>
       </ul>
 
@@ -53,9 +53,9 @@
 
     <ul>
       <li>Evita la flacidez</li>
-      <li>Reafirma la Piel</li>
+      <li>Reafirma la piel</li>
       <li>Rejuvenece el rostro</li>
-      <li>Mejoran e inclusive, pueden eliminar las arrugas superficiales de la Piel</li>
+      <li>Mejoran e inclusive, pueden eliminar las arrugas superficiales de la piel</li>
       <li>Elevación de las mejillas</li>
       <li>Mejora el perfil de la mandíbula</li>
       <li>Eleva las cejas</li>
