--- a/cv.html
+++ b/cv.html
@@ -25,14 +25,14 @@
         <li><b>1983</b> <ul><li> 5 y 6 de agosto - Miembro Efectivo de la <strong>Jornada Internacional de Reumatología</strong> en Santa Ana de Livramento, Brasil</li>
         <li> 15 de octubre - Miembro Titular del <strong>XIII Congreso Uruguayo  de Reumatología</strong> en el Instituto Nacional de Reumatología, Montevideo, Uruguay</li></ul></li>
 
-        <li><b>1984</b> <ul><li> 26 y 27 de octubre - Miembro Titular de las Jornadas Uruguayas de Reumatología en el Instituto Nacional de Reumatología, Montevideo, Uruguay</li></ul></li>
+        <li><b>1984</b> <ul><li> 26 y 27 de octubre - Miembro Titular de las <strong>Jornadas Uruguayas de Reumatología</strong> en el Instituto Nacional de Reumatología, Montevideo, Uruguay</li></ul></li>
 
-        <li><b>1984</b> <ul><li> 5 y 6 de octubre - Miembro Titular de las Segundas Jornadas de Actualización organizada por la Sociedad de Medicina y Cirugía de la Mano del Uruguay</li></ul></li>
+        <li><b>1984</b> <ul><li> 5 y 6 de octubre - Miembro Titular de las <strong>Segundas Jornadas de Actualización</strong> organizada por la Sociedad de Medicina y Cirugía de la Mano del Uruguay</li></ul></li>
 
         <li><b>1985</b>
           <ul>
-            <li> 14 de setiembre - Miembro Titular de Actualizaciones en Reumatología, Cap I Mano Rematoidea, Instituto Nacional de Reumatología, Montevideo, Uruguay</li>
-            <li> 25 y 26 de octubre - Miembro Titular de II Jornadas Uruguayas de Reumatología, Sala 19 de Junio (BROU) Montevideo, Uruguay</li>
+            <li> 14 de setiembre - Miembro Titular de <strong>Actualizaciones en Reumatología</strong>, Cap I Mano Rematoidea, Instituto Nacional de Reumatología, Montevideo, Uruguay</li>
+            <li> 25 y 26 de octubre - Miembro Titular de <strong>II Jornadas Uruguayas de Reumatología</strong>, Sala 19 de Junio (BROU) Montevideo, Uruguay</li>
           </ul>
         </li>
 
