--- a/acupuntura.html
+++ b/acupuntura.html
@@ -320,10 +320,10 @@
       En la piel pueden estar vinculados con cicatrices. El dolor del <strong>PG</strong> Puede ser localizado o sentido en otra zona de la
       misma región o más allá de ella (<strong>dolor referido</strong>).
       <strong>La palpación de estas estructuras en general reproduce la sintomatología descripta por el paciente</strong>.
-      El <strong>dolor por PG Frecuentemente es sentido lejos de la zona del punto</strong>.
+      El <strong>dolor por PG frecuentemente es sentido lejos de la zona del punto</strong>.
       </p>
       <p>
-      Por ejemplo un <strong>dolor en la pierna</strong> puede tener su origen en un PG De la <strong>zona sacra</strong> o un dolor en el <strong>miembro superior o
+      Por ejemplo un <strong>dolor en la pierna</strong> puede tener su origen en un PG de la <strong>zona sacra</strong> o un dolor en el <strong>miembro superior o
       columna cervical</strong> puede deberse a un PG localizado a nivel del <strong>músculo elevador del omóplato</strong>, en la parte superior de la
       espalda.
       Mucho de los trayectos de estos dolores referidos coinciden con los meridianos de la MTCH.
