--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasm
              <li>Detiene el envejecimiento cutáneo</li>
           </ul>
           <div style='margin-bottom:55px' class="a-button-div">
-            <a class="a-button" href="prp.html">Leer más</a>
+            <a class="a-button" href="te.html">Leer más</a>
           </div>
           <p>Hilos Tensores</p>
           <ul>
