--- a/acupuntura.html
+++ b/acupuntura.html
@@ -121,7 +121,7 @@
         </p>
 
         <p style="margin: 0">
-        <strong>Existen otras formas de estimulación de los puntos además de las agujas, aplicando calor
+        <strong>Existen otras formas de estimulación de los puntos además de las agujas, aplicando calor,
         utilizando sustancias químicas, electricidad, corrientes electromagnéticas</strong>.
         Clásicamente e históricamente la acupuntura va acompañada con la moxibustión.
         </p>
@@ -146,7 +146,7 @@
 
       <p>
       En la antiguedad el tratamiento con Moxa era muy popular y posiblemente se haya originado antes que la acupuntura.
-      <strong>En nuestra clínica</strong> usamos muy poco esta técnica, pues hemos logrado efectos superiores con métodos más modernos.
+      <strong>En nuestra clínica usamos muy poco esta técnica</strong>, pues hemos logrado efectos superiores con métodos más modernos.
       </p>
 
       <h3 style="font-size: 20px">Auriculoterapia</h3>
@@ -201,11 +201,11 @@
       <p>Como ejemplo de polaridad en el organismo tenemos el Sistema Simpático y Parasimpático, que tienen acciones opuestas y
       complementarias a la vez.
       El <strong>Yin</strong> y el <strong>Yang</strong> están en un constante dinamismo buscando siempre el equilibrio.
-      La energía cósmica, se manifiesta en el ser humano como energía (Chi). Circula por canales llamados <strong>Meridianos</strong> y es la responsable de todas las funciones
+      La energía cósmica, se manifiesta en el ser humano como energía <strong>vital (Chi)</strong>. Circula por canales llamados <strong>Meridianos</strong> y es la responsable de todas las funciones
       del organismo.</p>
 
-      <p>Según la Medicina Tradicional China la normal circulación del Chi se ve obstaculizada por la acción de "energías perversas"
-       o "factores patógenos", estos factores pueden ser, externos, internos o mixtos.</p>
+      <p>Según la Medicina Tradicional China la normal circulación del <strong>Chi</strong> se ve obstaculizada por la acción de <strong>"energías perversas"</strong>
+       o <strong>"factores patógenos"</strong>, estos factores pueden ser, externos, internos o mixtos.</p>
 
       <p style="font-size:20px">Factores patógenos externos</p>
         <ul>
@@ -243,7 +243,7 @@
 
         <h3 style="font-size: 20px">Meridianos</h3>
 
-        <p>De acuerdo a la Medicina Tradicional China (MTCH), los meridianos son canales por donde circula la energía vital (Chi)
+        <p>De acuerdo a la Medicina Tradicional China (MTCH), los meridianos son canales por donde circula la <strong>energía vital (Chi)</strong>
         del cuerpo, responsable del estado y funcionamiento de los órganos y tejidos. A lo largo de ellos se encuentran los puntos
         de acupuntura.
         Se trata de zonas a través de los cuales podemos regular el flujo de esa energía.
@@ -262,7 +262,7 @@
 
       <div class = "squared">
       <p style="margin: 0">
-      La ciencia occidental contribuyó a un mejor entendimiento de la acupuntura y con ello logró métodos, diagnósticos y
+      La ciencia occidental contribuyó a un mejor entendimiento de la acupuntura y con ello logró métodos diagnósticos y
       tratamientos más prácticos y modernos.</p>
       </div>
 
@@ -270,7 +270,7 @@
       <p>En nuestro consultorio combinamos los principios de la acupuntura tradicional china con los conocimientos científicos de
       la medicina occidental.</p>
 
-      <p style="margin: 0">Nuestra condición de médico y especialista en reumatología junto con muchos años de estudio y práctica de la acupuntura,
+      <p style="margin: 0">Nuestra condición de <strong>Médico y Especialista en Reumatología</strong> junto con muchos años de estudio y práctica de la <strong>Acupuntura</strong>,
       respaldan nuestro trabajo profesional.</p>
       </div>
 
@@ -285,12 +285,12 @@
       En el siglo pasado, la <strong>Acupuntura</strong> ingresa a Occidente y en los últimos años <strong>llega el conocimiento científico a esta
       disciplina oriental, la Clínica, la Anatomía, la Fisiología, la Patología, la Neurologia, la Farmacología y la Tecnología
       modifican la forma de entenderla y por lo tanto de aplicarla</strong>.
-      Las investigaciones científicas avalan nuevas maneras de diagnosticar y de tratar las enfermedades con acupuntura.
-      Existen muchas formas de hacer acupuntura inclusive en la propia China.
+      Las investigaciones científicas avalan nuevas maneras de diagnosticar y de tratar las enfermedades con acupuntura. <br>
+      Existen muchas formas de hacer acupuntura inclusive en la propia China. A ésto le agregamos el aporte particular de las escuelas japonesas,
+      coreanas y vietnamitas entre otras.
       </p>
 
       <p>
-      A ésto le agregamos el aporte particular de las escuelas japonesas, coreanas y vietnamitas entre otras.
       Finalmente europeos y americanos aportarán el conocimiento científico occidental para darle a la acupuntura un tinte
       moderno y práctico.
       La característica común de todos los tipos de acupuntura es el uso de finas agujas de metal para aplicarlas en los
