--- a/ah.html
+++ b/ah.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div style="padding: 70px 0 120px 0">
-    <h1 style="padding: 0px 0 40px 0">Ácido Hialurónico (AH)</h1>
+    <h1 style="padding: 0px 0 40px 0">Ácido Hialurónico Articular (AH)</h1>
 
     <ul style="padding: 0px 0 40px 0" class="index"></ul>
 
@@ -73,7 +73,7 @@
       <p>Se recomienda una inyección intra-articular semanal durante tres a cinco semanas.</p>
 
       <div class="a-button-div--art">
-        <a class="a-button" href="artrosis.html">AH y Artrosis</a>
+        <a class="a-button" href="artrosis.html">Ácido Hialurónico y Artrosis</a>
       </div>
 
       <p>
@@ -93,7 +93,7 @@
         Esta sustancia es segregada por diferentes tipos de células: Sinoviocitos, Condrocitos y Fibroblastos.
       </p>
 
-      <p>En la <strong>Artrosis</strong> la concentración de <strong>Ácido Hialurónico</strong> en el <strong>líquido sinovial</strong> está disminuída y alterada.</p>
+      <p>En la <strong>Artrosis</strong> la concentración de <strong>Ácido Hialurónico</strong> en el <strong>líquido sinovial</strong> está disminuída, por lo cual las propiedades mencionadas de este fluido están alteradas.</p>
     </div>
   </div>
   <script src="./main.bundle.js" charset="utf-8"></script>
