--- a/cv.html
+++ b/cv.html
@@ -18,6 +18,8 @@
   <div style="padding: 70px 0 120px 0">
     <h1 style="padding: 0px 0 40px 0">Curriculum</h1>
 
+    <h2 class="name">Dr. Félix Nolberto Macedo Bergara</h2>
+
     <div class="text">
       <ul>
         <li><b>1981</b> <ul><li> 11 de noviembre -	<strong>TÍTULO DE DOCTOR EN MEDICINA</strong></li></ul></li>
@@ -261,6 +263,11 @@
 
         <li><b>2016</b>
           <ul>
+            <li> 18 de abril
+              <ul>
+                <li><strong>Curso intensivo de Plasma Rico en Plaquetas aplicada a la estética</strong> Sociedad Argentina de Medicina Estética. Buenos Aires, Argentina.
+              </ul>
+            </li>
             <li> 29 de octubre
               <ul>
                 <li><strong>IV Congreso Internacional de Acupuntura</strong> del Colegio Médico de Acupuntura do Estado de São Paulo (CMAESP)</li>
