--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasm
       <div class="sq2">
         <div class="sq2__txt">
           <h4 class="sq2__txt__h4">Tratamientos estéticos</h4>
-          <p class="sq2__txt__p">Rejuvenecimiento facial con Plasma Rico en Plaquetas.</p>
+          <p class="sq2__txt__p"><stromg>Rejuvenecimiento facial con Plasma Rico en Plaquetas</stromg>.</p>
           <ul class="sq2__txt__ul">
              <li>Regenera</li>
              <li>Rejuvenece</li>
@@ -155,7 +155,7 @@ En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasm
           <div style='margin-bottom:55px' class="a-button-div">
             <a class="a-button" href="te.html">Leer más</a>
           </div>
-          <p>Hilos Tensores</p>
+          <p><strong>Hilos Tensores</strong></p>
           <ul>
             <li>Sostienen y reposicionan la piel y tejidos caídos</li>
             <li>Combate la flacidez</li>
