--- a/artrosis.html
+++ b/artrosis.html
@@ -43,7 +43,7 @@
         <strong>Dolor mecánico</strong> es aquel que se presenta con el movimiento, cuando la articulación soporta cargas y calma con el reposo.
         Se trata de un dolor crónico con empujes y remisiones.
         La <strong>Artrosis</strong> es una patología que se inicia en el <strong>Cartílago Articular</strong> pero que después termina afectando al hueso subcondral,
-        Periostio y a la sinovial.
+        periostio y a la sinovial.
       </p>
 
       <p>
@@ -125,14 +125,14 @@
         En el caso de la Artrosis estos factores actúan sobre el Condrocito (la célula del cartílago) <strong>regenerando el cartílago</strong>.
       </p>
       <p>
-        El método de obtención del PRP es muy sencillo, un técnico extrae sangre del paciente, centrifuga dicho fluído durante
+        El método de obtención del PRP es muy sencillo: un técnico extrae sangre del paciente, centrifuga dicho fluído durante
         ocho minutos e inmediatamente procede a la separación del concentrado plaquetario.
       </p>
 
       <p>
         El paso siguiente lo realiza el médico inyectando el preparado en la articulación enferma.
         Todo este procedimiento dura menos de una hora.
-        Se recomienda realizar tres aplicaciones de PRP separadas por una semana cada una (una por semana).
+        Se recomienda realizar tres aplicaciones de PRP separadas por una semana cada una.
       </p>
 
       <p>
@@ -164,7 +164,7 @@
       <ul>
         <li>Se degrada el <strong>cartílago articular</strong></li>
         <li>Se forman los <strong>osteofitos</strong> en los márgenes articulares</li>
-        <li>Se afecta el hueso subcondral, el cual se esclerosa y aparecen pseudoquistes óseos (<strong>geodas</strong>).</li>
+        <li>Se afecta el hueso subcondral, el cual se <strong>esclerosa</strong> y aparecen pseudoquistes óseos (<strong>geodas</strong>).</li>
         <li>Posteriormente se suceden una cadena de hechos en la articulación y alrededor de ella
           (zona periarticular) que llevan al compromiso de la sinovial, cápsula articular, ligamentos, músculos produciendo
         <ul>
