--- a/prp.html
+++ b/prp.html
@@ -45,7 +45,7 @@
 
         <li><strong>Tratamientos estéticos</strong>
           <ul>
-            <li><strong>Rejuvenecimiento facial</strong></li>
+            <li><strong>REJUVENECIMIENTO FACIAL</strong></li>
             <li><strong>Arrugas faciales</strong></li>
             <li><strong>Cicatrices</strong></li>
             <li><strong>Caída del cabello</strong></li>
@@ -68,14 +68,13 @@
 
     <h2 style="font-size: 22px">Aplicaciones del PRP en medicina estética</h2>
 
-      <p>El fundamento principal de la aplicación del PRP en estética, es la estimulación por parte de los factores de crecimiento,
-      del fibroblasto. Esta célula es la encargada de producir <strong>Ácido Hialurónico, Fibras Colágenas y Fibras Elásticas</strong>.</p>
+      <p>El fundamento principal de la aplicación del <strong>PRP</strong> es la estimulación del <strong>fibroblasto</strong>
+      parte de los factores de crecimiento.
+      Esta célula es la encargada de producir <strong>Fibras Colágenas, Fibras Elásticas (fundamentales en la calidad de la piel) y Ácido Hialurónico</strong>. <br>
+      Con los años, la producción de estos elementos va disminuyendo.</p>
 
-      <p>Estos elementos son fundamentales en la calidad de la piel que con los años su producción va disminuyendo.
-      Es decir, el PRP <strong>enlentece el envejecimiento y rejuvenece la piel</strong>.</p>
-
-      <p>Como norma se recomienda al inicio tres aplicaciones, una por mes, luego otra de refuerzo a los seis u ocho meses.
-      Esto puede ser sujeto a variaciones.</p>
+      <p><span>Con la aplicación del PRP, se enlentece el envejecimiento y se rejuvenece la piel</span>.Como norma se recomienda al inicio tres aplicaciones, una por mes, luego otra de refuerzo a los seis u ocho meses.
+      Ésto puede estar sujeto a variaciones.</p>
 
       <img class="art-pic" src="img/rostro.jpg" alt="plasma rico en plaquetas">
 
