--- a/prp.html
+++ b/prp.html
@@ -73,7 +73,7 @@
       Esta célula es la encargada de producir <strong>Fibras Colágenas, Fibras Elásticas (fundamentales en la calidad de la piel) y Ácido Hialurónico</strong>. <br>
       Con los años, la producción de estos elementos va disminuyendo.</p>
 
-      <p><span>Con la aplicación del PRP, se enlentece el envejecimiento y se rejuvenece la piel</span>.Como norma se recomienda al inicio tres aplicaciones, una por mes, luego otra de refuerzo a los seis u ocho meses.
+      <p><span>Con la aplicación del PRP, se <strong>enlentece el envejecimiento y se rejuvenece la piel</strong></span>.Como norma se recomienda al inicio tres aplicaciones, una por mes, luego otra de refuerzo a los seis u ocho meses.
       Ésto puede estar sujeto a variaciones.</p>
 
       <img class="art-pic" src="img/rostro.jpg" alt="plasma rico en plaquetas">
