--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasm
       <div class="sq2">
         <div class="sq2__txt">
           <h4 class="sq2__txt__h4">Tratamientos estéticos</h4>
-          <p class="sq2__txt__p"><stromg>Rejuvenecimiento facial con Plasma Rico en Plaquetas</stromg>.</p>
+          <p class="sq2__txt__p"><strong>Rejuvenecimiento facial con Plasma Rico en Plaquetas</strong>.</p>
           <ul class="sq2__txt__ul">
              <li>Regenera</li>
              <li>Rejuvenece</li>
