--- a/acupuntura.html
+++ b/acupuntura.html
@@ -201,7 +201,7 @@
       <p>Como ejemplo de polaridad en el organismo tenemos el Sistema Simpático y Parasimpático, que tienen acciones opuestas y
       complementarias a la vez.
       El <strong>Yin</strong> y el <strong>Yang</strong> están en un constante dinamismo buscando siempre el equilibrio.
-      La energía cósmica, se manifiesta en el ser humano como energía <strong>vital (Chi)</strong>. Circula por canales llamados <strong>Meridianos</strong> y es la responsable de todas las funciones
+      La energía cósmica, se manifiesta en el ser humano como <strong>energía vital (Chi)</strong>. Circula por canales llamados <strong>Meridianos</strong> y es la responsable de todas las funciones
       del organismo.</p>
 
       <p>Según la Medicina Tradicional China la normal circulación del <strong>Chi</strong> se ve obstaculizada por la acción de <strong>"energías perversas"</strong>
