--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="titles">
         <h1 class="titles__h1">DR. FÉLIX MACEDO</h1>
-        <h2 class="titles__h2">MÉDICO REUMATÓLOGO <br> ACUPUNTURA <br> Tratamiento regenerativos con <br> PLASMA RICO EN PLAQUETAS</h2>
+        <h2 class="titles__h2">MÉDICO REUMATÓLOGO <br> ACUPUNTURA <br> Tratamientos regenerativos con <br> PLASMA RICO EN PLAQUETAS</h2>
         <div class="titles__button">
           <button class="titles__button button-primary">Contáctese</button>
         </div>
@@ -67,11 +67,11 @@
         <div class="sq1__txt">
           <h3 class="sq1__txt__h3">Plasma rico en plaquetas</h3>
             <ul class="sq1__txt__p">
-              <li class="sq1__txt__p__span">Regenera - Cartílago, Tendón, piel</li>
-              <li class="sq1__txt__p__span">Artrosis - Rodilla, Cadera, Hombros, Tobillos, Codos</li>
-              <li class="sq1__txt__p__span">Tendinitis</li>
-              <li class="sq1__txt__p__span">Lesiones deportivas</li>
-              <li class="sq1__txt__p__span">Rejuvenecimiento facial</li>
+              <li class="sq1__txt__p__span"><strong>Regenera</strong> - Cartílago, Tendón, piel</li>
+              <li class="sq1__txt__p__span"><strong>Artrosis</strong> - Rodilla, Cadera, Hombros, Tobillos, Codos</li>
+              <li class="sq1__txt__p__span"><strong>Tendinitis</strong></li>
+              <li class="sq1__txt__p__span"><strong>Lesiones deportivas</strong></li>
+              <li class="sq1__txt__p__span"><strong>Rejuvenecimiento facial</strong></li>
             </ul>
           <div class="a-button-div">
             <a class="a-button" href="prp.html">Leer más</a>
