--- a/prp.html
+++ b/prp.html
@@ -27,32 +27,33 @@
       Las plaquetas poseen proteínas llamadas <strong>factores de crecimiento</strong>, las cuales tienen la capacidad de <strong>regenerar
       tejidos lesionados, envejecidos o poseedores de una enfermedad regenerativa.
       El Plasma Rico en Plaquetas regenera cartílago (Artrosis de Rodilla, Cadera, Hombros), tendones (Tendinitis de hombro,
-      Codo, etc), piel (rejuvenecimiento facial)</strong>.
+      Codo, etc), piel (Rejuvenecimiento facial)</strong>.
       </p>
 
       <hr>
 
       <h2 style="font-size: 22px">Indicaciones del Plasma Rico en Plaquetas</h2>
+      <div class = "squared">
+        <ul>
+          <li><strong>Artrosis de Rodilla, Cadera, Hombro</strong>.</li>
 
-      <ul>
-        <li><strong>Artrosis de Rodilla, Cadera, Hombro</strong>.</li>
+          <li><strong>Tendinitis de Hombro, Codo</strong>.</li>
 
-        <li><strong>Tendinitis de Hombro, Codo</strong>.</li>
+          <li><strong>Lesiones deportivas</strong></li>
 
-        <li><strong>Lesiones deportivas</strong></li>
+          <li><strong>Espína calcánea</strong></li>
 
-        <li><strong>Espína calcánea</strong></li>
-
-        <li><strong>Tratamientos estéticos</strong>
-          <ul>
-            <li><strong>REJUVENECIMIENTO FACIAL</strong></li>
-            <li><strong>Arrugas faciales</strong></li>
-            <li><strong>Cicatrices</strong></li>
-            <li><strong>Caída del cabello</strong></li>
-            <li>Etc</li>
-          </ul>
-        </li>
-    </ul>
+          <li><strong>Tratamientos estéticos</strong>
+            <ul>
+              <li><strong>Rejuvenecimiento facial</strong></li>
+              <li><strong>Arrugas faciales</strong></li>
+              <li><strong>Cicatrices</strong></li>
+              <li><strong>Caída del cabello</strong></li>
+              <li>Etc</li>
+            </ul>
+          </li>
+        </ul>
+    </div>
 
     <h2 style="font-size: 22px">Efecto del PRP en la Artrosis</h2>
 
@@ -69,11 +70,11 @@
     <h2 style="font-size: 22px">Aplicaciones del PRP en medicina estética</h2>
 
       <p>El fundamento principal de la aplicación del <strong>PRP</strong> es la estimulación del <strong>fibroblasto</strong>
-      parte de los factores de crecimiento.
+      por parte de los factores de crecimiento.
       Esta célula es la encargada de producir <strong>Fibras Colágenas, Fibras Elásticas (fundamentales en la calidad de la piel) y Ácido Hialurónico</strong>. <br>
       Con los años, la producción de estos elementos va disminuyendo.</p>
 
-      <p><span>Con la aplicación del PRP, se <strong>enlentece el envejecimiento y se rejuvenece la piel</strong></span>.Como norma se recomienda al inicio tres aplicaciones, una por mes, luego otra de refuerzo a los seis u ocho meses.
+      <p><span><strong>Con la aplicación del PRP</strong>, se <strong>enlentece el envejecimiento</strong> y se <strong>rejuvenece la piel</strong></span>.Como norma se recomienda al inicio tres aplicaciones, una por mes, luego otra de refuerzo a los seis u ocho meses.
       Ésto puede estar sujeto a variaciones.</p>
 
       <img class="art-pic" src="img/rostro.jpg" alt="plasma rico en plaquetas">
